# pdf_scrub

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pdf_scrub.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
tests/: __init__.py  conftest.py  test_pdf_scrub.py
